--- a/pass_1a/metabolomics_data_analysis.Rmd
+++ b/pass_1a/metabolomics_data_analysis.Rmd
@@ -62,44 +62,15 @@ metabolomics_parsed_datasets = load_from_bucket(
   file = "metabolomics_parsed_datasets_pass1a_external1.RData",
   bucket = "gs://bic_data_analysis/pass1a/metabolomics/")[[1]]
 
-# # Read the dictionary
-# dict_bucket = 
+# # # Read the dictionary
+# dict_bucket =
 #   "gs://motrpac-external-release1-results/metabolomics_targeted/motrpac_metabolomics_data_dictionary-v1.1.5.txt"
 # dict_download = get_single_file_from_bucket_to_local_dir(dict_bucket)
 # metabolomics_dict = fread(dict_download[[1]],data.table = F)
-
-# Plot cv vs means
-library(gplots)
-d = metabolomics_parsed_datasets[["white_adipose_powder,metab_u_hilicpos,unnamed"]]
-dx = d$sample_data
-CoV<-function(x){return(sd(x,na.rm = T)/mean(x,na.rm=T))}
-dmeans = apply(dx,1,mean,na.rm=T)
-CoVs = apply(dx,1,CoV)
-inds = !is.na(CoVs)
-df = data.frame(Mean_intensity = dmeans[inds],CoV = CoVs[inds])
-plot(CoV~Mean_intensity,df,cex=0.5,pch=20)
-lines(lowess(CoV~Mean_intensity,df),lty=2,lwd=2,col="blue")
-
-dx = log(1+d$sample_data,base=2)
-dmeans = apply(dx,1,mean,na.rm=T)
-CoVs = apply(dx,1,CoV)
-inds = !is.na(CoVs)
-df = data.frame(Mean_intensity = dmeans[inds],CoV = CoVs[inds])
-plot(CoV~Mean_intensity,df,cex=0.5,pch=20)
-lines(lowess(CoV~Mean_intensity,df),lty=2,lwd=2,col="blue")
-
-# Plot number of NAs vs intensity mean
-dx = log(1+d$sample_data,base=2)
-dmeans = apply(dx,1,mean,na.rm=T)
-num_nas = rowSums(is.na(dx))
-df = data.frame(Num_NAs = num_nas[inds],Mean_intensity = dmeans[inds])
-plot(Num_NAs~Mean_intensity,df,cex=0.5,pch=20)
-lines(lowess(Num_NAs~Mean_intensity,df),lty=2,lwd=2,col="blue")
-cor(df$Num_NAs,df$Mean_intensity,method="spearman")
-
+# metabolomics_dict[grepl("gluc",metabolomics_dict[,2],ignore.case = T),]
 ```
-
 Define the variables to be adjusted for:
+
 ```{r}
 biospec_cols = c(
   "acute.test.distance",
@@ -115,17 +86,59 @@ differential_analysis_cols = c(
 pipeline_qc_cols = c("sample_order")
 ```
 
+# Log-transform: effect on variance
+
+Some sites do not use the log transformation on their dataset. In this section we plot the coefficient of variation as a function of the mean instensity. We take a single dataset as an example to show how log-transformed data have reduced dependency and smoother plots.
+
+As an additional analysis we also plot the number of missing values per metabolite as a function of its mean intensity. We show that while there is high correlation some missing values appear in fairely high intensities. This is important for imputation as some sites use some fixed low value instead of knn imputation.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
+
+# Plot cv vs means
+library(gplots)
+d = metabolomics_parsed_datasets[["white_adipose_powder,metab_u_hilicpos,unnamed"]]
+dx = d$sample_data
+CoV<-function(x){return(sd(x,na.rm = T)/mean(x,na.rm=T))}
+dmeans = apply(dx,1,mean,na.rm=T)
+CoVs = apply(dx,1,CoV)
+inds = !is.na(CoVs)
+df = data.frame(Mean_intensity = dmeans[inds],CoV = CoVs[inds])
+plot(CoV~Mean_intensity,df,cex=0.5,pch=20,main="Raw data")
+lines(lowess(CoV~Mean_intensity,df),lty=2,lwd=2,col="blue")
+
+# Repeat after log2
+dx = log(1+d$sample_data,base=2)
+dmeans = apply(dx,1,mean,na.rm=T)
+CoVs = apply(dx,1,CoV)
+inds = !is.na(CoVs)
+df = data.frame(Mean_intensity = dmeans[inds],CoV = CoVs[inds])
+plot(CoV~Mean_intensity,df,cex=0.5,pch=20,main="Log2 data")
+lines(lowess(CoV~Mean_intensity,df),lty=2,lwd=2,col="blue")
+
+# Plot number of NAs vs intensity mean
+dx = log(1+d$sample_data,base=2)
+dmeans = apply(dx,1,mean,na.rm=T)
+num_nas = rowSums(is.na(dx))
+df = data.frame(Num_NAs = num_nas[inds],Mean_intensity = dmeans[inds])
+rho = cor(df$Num_NAs,df$Mean_intensity,method="spearman")
+rho = format(rho,digits=2)
+plot(Num_NAs~Mean_intensity,df,cex=0.5,pch=20,
+     main=paste("Spearman:",rho))
+
+
+```
+
 # Data filtering and normalization
 
-We go over each dataset and merge the named and unnamed subparts of the untargeted datasets. For targeted data - the release buckets we merge datasets that are from the same site and tissue.
+We go over each dataset and merge the named and unnamed subparts of the untargeted datasets. For targeted data, we merge datasets that are from the same site and tissue.
 
-Then the preprocessing of the new datasets is as follows: (1) log the data (values are raw intensities), (2) remove rows with $>20\%$ missing values, and (3) impute missing values.
+Then the preprocessing of the new merged datasets is as follows: (1) log the data (values are raw intensities), (2) remove rows with $>20\%$ missing values, and (3) impute missing values using knn (k=10).
 
 Important: datasets that do not have unique metabolite names or sample ids probably had errors while parsing and are therefore ignored. Also, untargeted with failed mergning of the unnamed and named subsets (e.g., due to different sample ids) are ignored as well.
 
 Finally we add an additional version for each dataset by directly regressing out the sample order component. See https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4757603/ for more details (trend correction is also called background correction, and this is done for each batch separately).
 
-```{r,out.height='50%',out.width='50%',message=T,warning=FALSE}
+```{r,message=FALSE,warning=FALSE}
 metabolomics_processed_datasets = c()
 # set a binary vector indicating with entries to skip
 metabolomics_raw_datasets_skip = rep(F,length(metabolomics_parsed_datasets))
@@ -184,14 +197,15 @@ for(currname in names(metabolomics_parsed_datasets)){
           # these has been partially submitted and we therefore need to
           # intersect here
           shared_meta_samples = intersect(rownames(curr_meta),rownames(another_meta))
-          # make sure that the vials, types, and order are te same
+          # make sure that the vials, types, and order are the same
           if(length(shared_meta_samples) < 1 ||
-            !all(curr_meta[shared_meta_samples,1:3]==another_meta[shared_meta_samples,1:3])){
-            next
+            !all(curr_meta[shared_meta_samples,1:3]==
+                 another_meta[shared_meta_samples,1:3])){
+            next # continue if cannot merge
           }
           try({
             newd = merge_named_and_unnamed_metabolomics_datasets(
-              newd,another_d,strict = F) # no strict merge
+              newd,another_d,strict = F) # no strict merge thanks to test above
             metabolomics_raw_datasets_skip[another_dataset] = T
           })
       }
@@ -209,7 +223,8 @@ for(currname in names(metabolomics_parsed_datasets)){
   curr_data  = newd$sample_data
   curr_data2 = recast_numeric_data_frame(curr_data)
   curr_data_mat = as.matrix(curr_data2)
-  print(paste("no errors in parsing numeric values:",all(curr_data==curr_data_mat,na.rm=T)))
+  print(paste("no errors in parsing numeric values:",
+              all(curr_data==curr_data_mat,na.rm=T)))
 
   # floor the data at 0
   curr_data_mat[curr_data_mat<0] = 0
@@ -283,11 +298,12 @@ metabolomics_processed_datasets = load_from_bucket(
 )[[1]]
 ```
 
-# Examine the unlogged data
+# Log-transform: effect on differential analysis
 
-Untargeted data are typically logged and analyzed using linear models. On the other hand, concentration data are analyzed with the same type of models but using the original data. This raises a problem if we wish to compare exact statistics from these data. In this section we perform residual analysis for single metabolites. Our goal is to identify if concentration data behaves "normally" when not logged. The analysis below examines the residuals of the data and uses qq-plots to determine if a log transformation is indeed required.
+Untargeted data are typically log-transformed and analyzed using linear models. On the other hand, concentration data are sometimes analyzed with the same type of models but using the original data. This raises a problem if we wish to compare exact statistics from these data. In this section we perform residual analysis for single metabolites. Our goal is to identify if concentration data behaves "normally" when not log-transformed. The analysis below examines the residuals of the data after fitting linear models for each metabolite, adjusting for freeze time and sex. We then compare the results with and without the log-transformation, counting the number of metabolites with a significant evidence for non-normally distributed residuals. 
 
-```{r,out.height='50%',out.width='50%',message=T,warning=FALSE}
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
+# check for normality using the Kolmogorov-Smirnov test
 is_normal_test<-function(v,samp=10000){
   return(ks.test(v,"pnorm",mean(v,na.rm=T),sd(v,na.rm = T))$p.value)
 }
@@ -332,11 +348,13 @@ for(nn1 in names(metabolomics_processed_datasets)){
   residual_analysis_results[[nn1]] = curr_models
 }
 
+# Is there a significant difference between the two options?
 log_vs_unlog_summ_mat = sapply(residual_analysis_results,
     function(x)sapply(x,
         function(y)
           wilcox.test(y[,1],y[,2],paired = T,alternative = "g")$p.value))
 
+# Count the number of non-normal metabolites
 num_nonnormal_log = sapply(residual_analysis_results,
     function(x)sapply(x,
         function(y)sum(y[,1]<0.05)))
@@ -350,7 +368,6 @@ num_nonnormal_unlog =
 
 library(corrplot)
 par(mar = c(5,5,5,10))
-corrplot(t(-log10(log_vs_unlog_summ_mat)),is.corr = F)
 corrplot(t(num_nonnormal_log)- t(num_nonnormal_unlog),
          is.corr = F,tl.cex = 0.7)
 
@@ -358,9 +375,11 @@ corrplot(t(num_nonnormal_log)- t(num_nonnormal_unlog),
 ```
 
 
-# Analysis of specific metabolites
+# Trageted vs. Untargeted: single metabolite comparison
 
-Compare overlaps, effect sizes, and correlations within tissues. Compare targeted-untargeted pairs only.
+## Compute statistics for each dataset
+
+Compare overlaps, effect sizes, and correlations within tissues. Compare targeted-untargeted pairs only. For differential analysis we use the same model as in the analysis above.
 
 ```{r,out.height='50%',out.width='50%',message=T,warning=FALSE}
 
@@ -505,6 +524,8 @@ for(nn1 in names(metabolomics_processed_datasets)){
     single_metabolite_corrs[[nn1]][[nn2]] = corrs
   }
 }
+
+# Reformat the results for easier comparison later
 single_metabolite_de = data.frame(single_metabolite_de)
 names(single_metabolite_de) = c(
   "dataset","metabolite","tp","tissue",
@@ -517,13 +538,7 @@ for(col in names(single_metabolite_de)[1:4]){
   single_metabolite_de[[col]] = 
     as.character(single_metabolite_de[[col]])
 }
-
-```
-
-We next transform the data above into tables that contain data for each combination of metabolite, time point, and tissue. These are then used for two meta-analyses: (1) a simple random effects analysis, and (2) random effects with a binary covariate indicating if a dataset is targeted or untargeted.
-
-```{r,out.height='50%',out.width='50%',message=F,warning=FALSE}
-
+# Remove duplications
 rownames(single_metabolite_de) = NULL
 for(nn in names(single_metabolite_de)){
   ndig = 5
@@ -536,6 +551,12 @@ for(nn in names(single_metabolite_de)){
 }
 single_metabolite_de = unique(single_metabolite_de)
 
+```
+
+We next transform the data above into tables that contain data for each combination of metabolite, time point, and tissue. These are then used for two meta-analyses: (1) a simple random effects analysis, and (2) random effects with a binary covariate indicating if a dataset is targeted or untargeted.
+
+```{r,out.height='50%',out.width='50%',message=F,warning=FALSE}
+
 library(metafor)
 meta_analysis_stats = list()
 for(tissue in unique(single_metabolite_de$tissue)){
@@ -547,7 +568,8 @@ for(tissue in unique(single_metabolite_de$tissue)){
       curr_met_data = curr_subset[
         curr_subset$metabolite==metabolite,]
       curr_met_data$var = curr_met_data$Std^2
-      re_model1 = NULL;re_model2=NULL;re_model_tar = NULL
+      re_model1 = NULL;re_model2=NULL
+      re_model_tar = NULL;re_model_untar = NULL
       try({re_model1 = rma.uni(curr_met_data$Est,curr_met_data$var)})
       try({re_model2 = rma.mv(curr_met_data$Est,curr_met_data$var,
                          mods=curr_met_data$is_targeted)})
@@ -555,15 +577,22 @@ for(tissue in unique(single_metabolite_de$tissue)){
         curr_met_data[curr_met_data$is_targeted==1,"Est"],
         curr_met_data[curr_met_data$is_targeted==1,"var"]
       )})
+      try({re_model_untar = rma.uni(
+        curr_met_data[curr_met_data$is_targeted==0,"Est"],
+        curr_met_data[curr_met_data$is_targeted==0,"var"]
+      )})
       meta_analysis_stats[[paste(metabolite,tissue,tp,sep=",")]] = 
         list(curr_met_data=curr_met_data,re_model1=re_model1,
-            re_model2 = re_model2,re_model_tar=re_model_tar)
+            re_model2 = re_model2,re_model_tar=re_model_tar,
+            re_model_untar = re_model_untar)
     }
   }
 }
 
 
 ```
+
+## Comparison results
 
 We now show some plots to summarize the comparison. We plot the overall average correlation between the platforms (within tissues). However, going into a single metabolite comparison in detail (again, within tissues), for each metabolite, in each time point we perform a meta-analysis of the effects and examine the significance and heterogeneity.
 
@@ -642,12 +671,39 @@ for(tar_dataset in names(single_metabolite_corrs)){
   )
 }
 
-# Look at the meta-analysis results 
+# Look at the meta-analysis results
+# Check glucose and lactate in muscle
+lact_res = meta_analysis_stats[
+  grepl("lact",names(meta_analysis_stats),ignore.case = T)
+]
+for(lact_example in names(lact_res)){
+  forest(meta_analysis_stats[[lact_example]]$re_model1,
+       slab = meta_analysis_stats[[lact_example]][[1]][,1],
+       main = lact_example,xlab = "Log fc",
+       col = "blue",cex = 1.1)
+}
+
+# Naive comparison
+thr = 0.001
+naive_analysis_tables = lapply(meta_analysis_stats,
+    function(x)table(x$curr_met_data[,"Pvalue"]<thr,
+                     x$curr_met_data[,"is_targeted"]))
+table_with_sig_results = naive_analysis_tables[
+  sapply(naive_analysis_tables,nrow)>1
+]
+
 # Extract some useful statistics per analysis
-pvals_tar = sapply(meta_analysis_stats,function(x)x$re_model1$pval)
+pvals_tar = sapply(meta_analysis_stats,function(x)x$re_model_tar$pval)
+
+pvals_untar = sapply(meta_analysis_stats,function(x)x$re_model_untar$pval)
+pvals_untar = unlist(pvals_untar[sapply(pvals_untar,length)>0])
+plot(-log10(pvals_untar),-log10(pvals_tar[names(pvals_untar)]))
+table(pvals_untar<0.001)
+table(pvals_tar<0.001,pvals_untar<0.001)
+
 
 I2_scores = sapply(meta_analysis_stats,function(x)x$re_model1$I2)
-I2_scores = unlist(I2_scores[sapply(I2_scores,length)>0])
+
 hist(I2_scores)
 betas = sapply(meta_analysis_stats,function(x)x$re_model1$beta[1,1])
 betas = unlist(betas[names(I2_scores)])
@@ -676,7 +732,7 @@ forest(meta_analysis_stats[[disagree_example]]$re_model1,
 ```
 
 
-# Dataset pairwise comparison as a prediction task
+# Targeted vs. untargeted: comparison as a prediction task
 
 Use 10-fold cross validation for analysis within tissues.
 
@@ -905,196 +961,79 @@ abline(h=cov_baseline[6],lty=2,lwd=2,col="red")
 
 ```
 
-## Comparison of covariance matrices
+<!-- ## Comparison of covariance matrices -->
 
-```{r}
+<!-- ```{r} -->
 
-CV <-function(x){
-  return(sd(x)/mean(x))
-}
+<!-- CV <-function(x){ -->
+<!--   return(sd(x)/mean(x)) -->
+<!-- } -->
 
-# Get all correlation and covariance matrices
-y = metabolomics_parsed_datasets[[1]]$sample_data # anchor all datasets by these ids
-y_vials = colnames(y)
-bid_y = as.character(merged_dmaqc_data[colnames(y),"bid"])
-cov_cols = c("animal.registration.sex",
-             "acute.test.weight",
-             "acute.test.distance")
-covs = merged_dmaqc_data[y_vials,cov_cols]
+<!-- # Get all correlation and covariance matrices -->
+<!-- y = metabolomics_parsed_datasets[[1]]$sample_data # anchor all datasets by these ids -->
+<!-- y_vials = colnames(y) -->
+<!-- bid_y = as.character(merged_dmaqc_data[colnames(y),"bid"]) -->
+<!-- cov_cols = c("animal.registration.sex", -->
+<!--              "acute.test.weight", -->
+<!--              "acute.test.distance") -->
+<!-- covs = merged_dmaqc_data[y_vials,cov_cols] -->
 
-cov_matrices = list()
-cor_matrices = list()
-for(nn in names(metabolomics_parsed_datasets)){
-  x = metabolomics_parsed_datasets[[nn]]$sample_data
-  bid_x = as.character(merged_dmaqc_data[colnames(x),"bid"])
-  print(sum(!is.element(bid_y,set=bid_x))) # should be zero
-  colnames(x) = bid_x
-  x = x[,bid_y]
-  # x = apply(x,1,regress_out,covs=covs)
-  # x = t(x)
-  # cvs = apply(x,1,CV)
-  # print(table(cvs>0.5))
-  # x = x[cvs>0.5,]
-  # pcax = t(prcomp(t(x),scale. = F)$x[,1:10])
-  cov_matrices[[nn]] = cov(x)
-  cor_matrices[[nn]] = cor(x)
-}
-sapply(cor_matrices,dim)
-library('evolqg');library(corrplot)
-mantel_tests= MantelCor(cor_matrices)
-mcors= MatrixCor(cor_matrices)
-mcors = as.matrix(forceSymmetric(mcors,uplo="L"))
-mantel_tests = as.matrix(
-  forceSymmetric(mantel_tests$probabilities,uplo = "L"))
-# diag(mantel_tests)=0
-ord = corrplot(t(mcors),order="hclust")
-ord = rownames(ord)
-corrplot(mcors[ord,ord],p.mat=mantel_tests[ord,ord],
-         insig = "label_sig",method="shade",
-         sig.level = c(.0001, .001, .01),
-         pch.cex = .9, pch.col = "black")
-# rs_res = RandomSkewers(cor_matrices)
-# corrplot(rs_res$correlations,
-#          p.mat=mantel_tests$probabilities,type="lower",
-#          insig = "label_sig",method="shade",
-#          sig.level = c(.0001, .001, .01),
-#          pch.cex = .9, pch.col = "black",tl.cex=0.6)
+<!-- cov_matrices = list() -->
+<!-- cor_matrices = list() -->
+<!-- for(nn in names(metabolomics_parsed_datasets)){ -->
+<!--   x = metabolomics_parsed_datasets[[nn]]$sample_data -->
+<!--   bid_x = as.character(merged_dmaqc_data[colnames(x),"bid"]) -->
+<!--   print(sum(!is.element(bid_y,set=bid_x))) # should be zero -->
+<!--   colnames(x) = bid_x -->
+<!--   x = x[,bid_y] -->
+<!--   # x = apply(x,1,regress_out,covs=covs) -->
+<!--   # x = t(x) -->
+<!--   # cvs = apply(x,1,CV) -->
+<!--   # print(table(cvs>0.5)) -->
+<!--   # x = x[cvs>0.5,] -->
+<!--   # pcax = t(prcomp(t(x),scale. = F)$x[,1:10]) -->
+<!--   cov_matrices[[nn]] = cov(x) -->
+<!--   cor_matrices[[nn]] = cor(x) -->
+<!-- } -->
+<!-- sapply(cor_matrices,dim) -->
+<!-- library('evolqg');library(corrplot) -->
+<!-- mantel_tests= MantelCor(cor_matrices) -->
+<!-- mcors= MatrixCor(cor_matrices) -->
+<!-- mcors = as.matrix(forceSymmetric(mcors,uplo="L")) -->
+<!-- mantel_tests = as.matrix( -->
+<!--   forceSymmetric(mantel_tests$probabilities,uplo = "L")) -->
+<!-- # diag(mantel_tests)=0 -->
+<!-- ord = corrplot(t(mcors),order="hclust") -->
+<!-- ord = rownames(ord) -->
+<!-- corrplot(mcors[ord,ord],p.mat=mantel_tests[ord,ord], -->
+<!--          insig = "label_sig",method="shade", -->
+<!--          sig.level = c(.0001, .001, .01), -->
+<!--          pch.cex = .9, pch.col = "black") -->
+<!-- # rs_res = RandomSkewers(cor_matrices) -->
+<!-- # corrplot(rs_res$correlations, -->
+<!-- #          p.mat=mantel_tests$probabilities,type="lower", -->
+<!-- #          insig = "label_sig",method="shade", -->
+<!-- #          sig.level = c(.0001, .001, .01), -->
+<!-- #          pch.cex = .9, pch.col = "black",tl.cex=0.6) -->
 
-library(psych)
+<!-- library(psych) -->
 
-r1 = cor_matrices[[1]]
-r2 = cor_matrices[[8]]
-cor(r1[lower.tri(r1)],r2[lower.tri(r2)])
-mantel_tests[1,8]
-mantel_tests[8,1]
+<!-- r1 = cor_matrices[[1]] -->
+<!-- r2 = cor_matrices[[8]] -->
+<!-- cor(r1[lower.tri(r1)],r2[lower.tri(r2)]) -->
+<!-- mantel_tests[1,8] -->
+<!-- mantel_tests[8,1] -->
 
-threshold_comp = apply_function_on_pairs(cor_matrices,
-          function(x,y)sum(x>0.7&y>0.7))
-corrplot(threshold_comp,is.corr = F,order="hclust")
+<!-- threshold_comp = apply_function_on_pairs(cor_matrices, -->
+<!--           function(x,y)sum(x>0.7&y>0.7)) -->
+<!-- corrplot(threshold_comp,is.corr = F,order="hclust") -->
 
-threshold_comp = apply_function_on_pairs(cor_matrices,
-         function(x,y)mean(diag(cor(x,y))))
-corrplot(threshold_comp,is.corr = F,order="hclust")
+<!-- threshold_comp = apply_function_on_pairs(cor_matrices, -->
+<!--          function(x,y)mean(diag(cor(x,y)))) -->
+<!-- corrplot(threshold_comp,is.corr = F,order="hclust") -->
 
-```
+<!-- ``` -->
 
-# Integrarion with RNAseq
-
-```{r}
-rnaseq_data_for_difftests = load_from_bucket(
-  "rnaseq_data_for_difftests.RData",
-  "gs://bic_data_analysis/pass1a/rnaseq/"
-)[[1]]
-met_vs_rnaseq_cors = c()
-for(nn in names(rnaseq_data_for_difftests)){
-  d = rnaseq_data_for_difftests[[nn]]$fpkms
-  covs = rnaseq_data_for_difftests[[nn]]$dmaqc_meta[,cov_cols]
-  
-  cvs = apply(d,1,CV)
-  print(table(cvs>0.25))
-  x = d[cvs>0.25,]
-  # x = apply(x,1,regress_out,covs=covs)
-  # x = t(x)
-  
-  bid_x = sapply(colnames(x),substr,1,5)
-  print(sum(!is.element(bid_y,set=bid_x))) # should be zero
-  colnames(x) = bid_x
-  x = x[,bid_y]
-  
-  curr_cors = cor(x)
-  v = c()
-  for(nn2 in names(cor_matrices)){
-    v[nn2] = MatrixCor(curr_cors,cor_matrices[[nn2]])
-  }
-  met_vs_rnaseq_cors = rbind(met_vs_rnaseq_cors,v)
-  rownames(met_vs_rnaseq_cors)[nrow(met_vs_rnaseq_cors)] = nn
-}
-library(gplots)
-heatmap.2(t(met_vs_rnaseq_cors),
-          trace="none",scale=NULL,mar=c(15,15),
-          key.xlab = "Correlation",
-          col=redblue(200), breaks=seq(-1,1,0.01))
-
-```
-
-# Looking at metabolite overlap
-
-```{r,fig.align="center",out.height='50%',out.width='80%',message=FALSE,warning=FALSE}
-metabolite_sets = list()
-for(nn in names(metabolomics_parsed_datasets)){
-  an = metabolomics_parsed_datasets[[nn]]$row_annot
-  name_cols = colnames(an)[grepl("_name",colnames(an),ignore.case = T)]
-  metabolite_sets[[nn]] = unique(tolower(an[,name_cols[1]]))
-}
-overlap_matrix = apply_function_on_pairs(metabolite_sets,
-                                         function(x,y)length(intersect(x,y)))
-corrplot(log(overlap_matrix+1,10),is.corr = F)
-
-
-site_cor_comparison = apply_function_on_pairs(
-  metabolomics_parsed_datasets,
-  compare_two_met_sites,print_progress = T,
-  merged_dmaqc_data = merged_dmaqc_data,samplesize=500
-)
-
-site_cor_comparison[is.na(site_cor_comparison)]=0
-corrplot(site_cor_comparison,order="hclust")
-
-compare_two_met_sites<-function(x,y,merged_dmaqc_data,samplesize=100,...){
-  an_x = x$row_annot
-  name_colsx = colnames(an_x)[grepl("_name",colnames(an_x),ignore.case = T)]
-  an_y = y$row_annot
-  name_colsy = colnames(an_y)[grepl("_name",colnames(an_y),ignore.case = T)]
-  
-  names_x = as.character(an_x[,name_colsx[1]])
-  names_y = as.character(an_y[,name_colsy[1]])
-  shared = intersect(names_x,names_y)
-  shared = setdiff(shared,c(NA,""))
-  
-  mx = x$sample_data
-  my = y$sample_data
-  
-  if(any(table(names_x)>1)){
-    mx = apply(mx,2,function(x,y)tapply(x,INDEX=y,FUN=mean,na.rm=T),y=names_x)
-  }
-  else{
-    rownames(mx) = as.character(names_x)
-  }
-  if(any(table(names_y)>1)){
-    my = apply(my,2,function(x,y)tapply(x,INDEX=y,FUN=mean,na.rm=T),y=names_y)
-  }
-  else{
-    rownames(my) = as.character(names_y)
-  }
-  
-  bid_x = as.character(merged_dmaqc_data[colnames(mx),"bid"])
-  bid_y = as.character(merged_dmaqc_data[colnames(my),"bid"])
-  if(sum(!is.element(bid_y,set=bid_x))>0){
-    stop("BIDs do not match between x and y")
-  } # should be zero
-  colnames(mx) = bid_x
-  colnames(my) = bid_y
-  if(length(shared)>samplesize){
-    shared = sample(shared)[1:samplesize]
-  }
-  mx = mx[shared,bid_y]
-  my = my[shared,]
-  mx = as.matrix(mx);my = as.matrix(my)
-  if(nrow(mx)<2){return(NA)}
-  if(length(shared)<=100){
-    corrs = diag(cor(t(mx),t(my)))
-  }
-  else{
-    corrs = c()
-    for(i in 1:nrow(mx)){
-      # print(mean(mx[i,]))
-      corrs[rownames(mx)[i]] = cor(mx[i,],my[i,])
-    }
-  }
-  return(mean(corrs))
-}
-
-```
 
 
 
