--- a/pass_1a/metabolomics_data_analysis.Rmd
+++ b/pass_1a/metabolomics_data_analysis.Rmd
@@ -545,6 +545,16 @@ for(nn in names(single_metabolite_de)){
 }
 single_metabolite_de = unique(single_metabolite_de)
 
+# a helper function for simplifying dataset names
+simplify_metab_dataset_name<-function(s){
+  s = gsub("metab_u_","",s)
+  s = gsub(",untargeted","",s)
+  s = gsub(",named","",s)
+  return(s)
+}
+single_metabolite_de[,1] = sapply(single_metabolite_de[,1],
+                                  simplify_metab_dataset_name)
+
 ```
 
 We next transform the data above into tables that contain data for each combination of metabolite, time point, and tissue. These are then used for different meta-analyses: (1) a simple random effects analysis, (2) random effects with a binary covariate indicating if a dataset is targeted or untargeted, (3) redo the RE model of (1) with the targeted data only, and (4) redo the RE model of (1) with the untargeted data only.
@@ -690,8 +700,10 @@ lact_res_hours = sapply(names(lact_res),
             function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
 lact_res = lact_res[order(lact_res_hours)]
 for(lact_example in names(lact_res)[1:6]){
+  curr_labels = gsub("plasma,","",
+                     meta_analysis_stats[[lact_example]][[1]][,1])
   forest(meta_analysis_stats[[lact_example]]$re_model1,
-       slab = meta_analysis_stats[[lact_example]][[1]][,1],
+       slab = curr_labels,
        main = lact_example,xlab = "Log fc",
        col = "blue",cex = 1.1)
 }
@@ -709,8 +721,10 @@ lact_res_hours = sapply(names(lact_res),
             function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
 lact_res = lact_res[order(lact_res_hours)]
 for(lact_example in names(lact_res)[1:6]){
+  curr_labels = gsub("liver_powder,","",
+                     meta_analysis_stats[[lact_example]][[1]][,1])
   forest(meta_analysis_stats[[lact_example]]$re_model1,
-       slab = meta_analysis_stats[[lact_example]][[1]][,1],
+       slab = curr_labels,
        main = lact_example,xlab = "Log fc",
        col = "blue",cex = 1.1)
 }
@@ -808,32 +822,42 @@ From the plots above we take the most extreme examples and examine their forest 
 ```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 agree_example = names(sample(which(pvals_tar< 1e-10 & pvals_untar < 1e-10 &
                                      targeted_diff_p > 0.1))[1])
+simplify_labels_for_forest<-function(s){
+  s = gsub(",untargeted","",s)
+  tissue = strsplit(s,split=",")[[1]][1]
+  s = gsub(paste(tissue,",",sep=""),"",s)
+  return(s)
+}
 forest(meta_analysis_stats[[agree_example]]$re_model1,
-  slab = meta_analysis_stats[[agree_example]][[1]][,1],
+  slab = simplify_labels_for_forest(
+    meta_analysis_stats[[agree_example]][[1]][,1]),
   main = paste(agree_example,"significant in both, tar and untar agree",sep="\n"),
   xlab = "Log fc",col = "blue")
 
 agree_p_disagree_beta = names(sample(which(pvals_tar< 1e-10 & pvals_untar < 1e-10 &
                                      targeted_diff_p < 0.001))[1])
 forest(meta_analysis_stats[[agree_p_disagree_beta]]$re_model1,
-  slab = meta_analysis_stats[[agree_p_disagree_beta]][[1]][,1],
+  slab = simplify_labels_for_forest(
+    meta_analysis_stats[[agree_p_disagree_beta]][[1]][,1]),
   main = paste(agree_p_disagree_beta,
                "significant in both, tar and untar disagree",sep="\n"),
   xlab = "Log fc",col = "blue")
 
 disagree_example1 = names(sample(which(pvals_tar< 1e-20 & pvals_untar >0.1))[1])
 forest(meta_analysis_stats[[disagree_example1]]$re_model1,
-  slab = meta_analysis_stats[[disagree_example1]][[1]][,1],
+  slab = simplify_labels_for_forest(
+    meta_analysis_stats[[disagree_example1]][[1]][,1]),
   main = paste(disagree_example1,
-               "significant in both, tar and untar agree",sep="\n"),
+               "significant targeted, tar and untar disagree",sep="\n"),
   xlab = "Log fc",col = "blue")
 
 
 disagree_example2 = names(sample(which(pvals_tar > 0.1 & pvals_untar < 1e-20))[1])
 forest(meta_analysis_stats[[disagree_example2]]$re_model1,
-  slab = meta_analysis_stats[[disagree_example2]][[1]][,1],
+  slab = simplify_labels_for_forest(
+    meta_analysis_stats[[disagree_example2]][[1]][,1]),
   main = paste(disagree_example2,
-               "significant in both, tar and untar agree",sep="\n"),
+               "significant in untargeted, tar and untar disagree",sep="\n"),
   xlab = "Log fc",col = "blue")
 
 ```
@@ -841,9 +865,9 @@ forest(meta_analysis_stats[[disagree_example2]]$re_model1,
 
 # Targeted vs. untargeted: comparison as a prediction task
 
-Use 10-fold cross validation for analysis within tissues.
+Use 5-fold cross validation for analysis within tissues. For each pair of targeted and untargeted datasets from the same tissue, we use the untargeted data as the predictive features and all metabolites in the targeted datasets as the dependent variables. The code below uses feature selection and random forests to train the predictive models. 
 
-```{r,eval=FALSE,fig.align="center",out.height='60%',out.width='60%',eval=FALSE}
+```{r,out.height='50%',out.width='50%',eval=FALSE,message=FALSE,warning=FALSE}
 nfolds = 5
 prediction_analysis_results = list()
 for(nn1 in names(metabolomics_processed_datasets)){
@@ -920,16 +944,97 @@ for(nn1 in names(metabolomics_processed_datasets)){
       preds = cbind(preds,i_preds)
       real = cbind(real,i_real)
     }
+    colnames(preds) = colnames(y)
+    colnames(reals) = colnames(y)
     currname = paste(nn1,nn2,sep=";")
     prediction_analysis_results[[currname]] = list(
       preds = preds,real=real
     )
   }
 }
-names(prediction_analysis_results)
+save_to_bucket(prediction_analysis_results,
+               file="tar_vs_untar_prediction_analysis_results.RData",
+               bucket = "gs://bic_data_analysis/pass1a/metabolomics/")
+```
+
+We now take the predicted and real values and estimate the prediction accuracy in different ways. 
+
+```{r,out.height='50%',out.width='50%',eval=TRUE,message=FALSE,warning=FALSE}
+
+prediction_analysis_results =  load_from_bucket(
+  "tar_vs_untar_prediction_analysis_results.RData",
+    "gs://bic_data_analysis/pass1a/metabolomics/",F)
+prediction_analysis_results = prediction_analysis_results[[1]]
+
+results_metrics = list()
+for(nn in names(prediction_analysis_results)){
+  preds = prediction_analysis_results[[nn]]$preds
+  real = prediction_analysis_results[[nn]]$real
+  tar_name = strsplit(nn,split=";")[[1]][1]
+  untar_name = strsplit(nn,split=";")[[1]][2]
+  y = metabolomics_processed_datasets[[tar_name]]$sample_data
+  colnames(preds) = rownames(y)
+  colnames(real) = rownames(y)
+  tar_name = simplify_metab_dataset_name(tar_name)
+  untar_name = simplify_metab_dataset_name(untar_name)
+  currtissue = strsplit(tar_name,split=",")[[1]][1]
+  tar_name = gsub(paste(currtissue,",",sep=""),"",tar_name)
+  untar_name = gsub(paste(currtissue,",",sep=""),"",untar_name)
+  if(! currtissue %in% names(results_metrics)){
+    results_metrics[[currtissue]] = list()
+  }
+  if(! tar_name %in% names(results_metrics[[currtissue]])){
+    results_metrics[[currtissue]][[tar_name]] = list()
+  }
+  
+  rhos = format(diag(cor(preds,real,method="spearman")),digits=3)
+  rhos = as.numeric(rhos)
+  SEs = colSums((preds-real)^2)
+  MSEs = SEs / nrow(preds)
+  RMSE = sqrt(MSEs)
+  rMSE = MSEs / apply(y,1,var)
+  CoVs = apply(y,1,sd) / apply(y,1,mean)
+  discCoVs = cut(CoVs,breaks = 2,ordered_result = T)
+  
+  results_metrics[[currtissue]][[tar_name]][[untar_name]] = data.frame(
+    rhos,MSEs,RMSE,rMSE,CoVs,discCoVs
+  )
+}
+
+```
+
+We now present a few summary plots.
+
+```{r,out.height='50%',out.width='50%',eval=TRUE,message=FALSE,warning=FALSE}
+for(tissue in names(results_metrics)){
+  for(tar in names(results_metrics[[tissue]])){
+    l = results_metrics[[tissue]][[tar]]
+    rho_vs_cv = c()
+    for(untar in names(l)){
+      m = l[[untar]][,c("rhos","discCoVs")] # take the current matrix
+      m = cbind(rep(untar,nrow(m)),m)
+      m$discCoVs = as.numeric(m$discCoVs)
+      rho_vs_cv = rbind(rho_vs_cv,m)
+    }
+    colnames(rho_vs_cv)[1] = "dataset"
+    boxplot(rhos~discCoVs:dataset,data=rho_vs_cv,las=2,
+            ylab="Spearman",xlab = "",
+            main = paste(tissue,tar,sep=","))
+  }
+}
+
+
+```
+
+As additional references, we train below additional models. First, we check the prediction of naive models that use technical and clinical covariates only. Second, we use multi-task regression and deep learning models.
+
+```{r,out.height='50%',out.width='50%',eval=FALSE,message=FALSE,warning=FALSE}
 
 cov_prediction_analysis_results = list()
 for(nn1 in names(metabolomics_processed_datasets)){
+  nn1_tissue = strsplit(nn1,split=",")[[1]][1]
+  nn1_tissue = gsub("_powder","",nn1_tissue)
+  if(grepl("untargeted",nn1)){next}
   print(nn1)
   y = metabolomics_processed_datasets[[nn1]]$sample_data
   y_vials = colnames(y)
@@ -970,71 +1075,6 @@ for(nn1 in names(metabolomics_processed_datasets)){
       preds = preds,real=real
     )
 }
-
-results_metrics = c()
-for(nn in names(prediction_analysis_results)){
-  preds = prediction_analysis_results[[nn]]$preds
-  real = prediction_analysis_results[[nn]]$real
-  rhos1 = diag(cor(preds,real))
-  rhos2 = diag(cor(preds,real,method="spearman"))
-  SEs = (preds-real)^2
-  mse = mean(SEs)
-  normSEs = SEs / apply(real,2,sd)
-  curr_scores = c(mean(rhos1),mean(rhos2),min(rhos1),min(rhos2),
-                  mse,mean(normSEs))
-  names(curr_scores) = c("mean_rho","mean_spearman_rho","min_rho","min_spearman_rho",
-                         "MSE","mean MSE/SD")
-  results_metrics = rbind(results_metrics,
-                          curr_scores)
-  rownames(results_metrics)[nrow(results_metrics)] = nn
-}
-
-cov_results_metrics = c()
-for(nn in names(cov_prediction_analysis_results)){
-  preds = cov_prediction_analysis_results[[nn]]$preds
-  real = cov_prediction_analysis_results[[nn]]$real
-  rhos1 = diag(cor(preds,real))
-  rhos2 = diag(cor(preds,real,method="spearman"))
-  SEs = (preds-real)^2
-  mse = mean(SEs)
-  normSEs = SEs / apply(real,2,sd)
-  curr_scores = c(mean(rhos1),mean(rhos2),min(rhos1),min(rhos2),
-                  mse,mean(normSEs))
-  names(curr_scores) = c("mean_rho","mean_spearman_rho","min_rho","min_spearman_rho",
-                         "MSE","mean MSE/SD")
-  cov_results_metrics = rbind(cov_results_metrics,
-                          curr_scores)
-  rownames(cov_results_metrics)[nrow(cov_results_metrics)] = nn
-}
-
-# Some boxplots
-pred_targets = sapply(names(prediction_analysis_results),function(x)
-  strsplit(x,split = ";")[[1]][1])
-target = "liver_powder,metab_t_tca,named" 
-curr_res = unique(results_metrics[pred_targets == target,])
-rownames(curr_res) = gsub(target,"",rownames(curr_res))
-rownames(curr_res) = gsub(";","",rownames(curr_res))
-rownames(curr_res)[rownames(curr_res)==""] = target
-cov_baseline = cov_results_metrics[target,]
-
-par(mar = c(8,4,2,2))
-cols = rep("blue",nrow(curr_res))
-cols[rownames(curr_res)==target] = "black"
-plt = barplot(curr_res[,4],beside = T,xaxt="n",legend=F,
-              ylab="Min rho (Spearman)",
-              ylim = c(0.5,1),xpd=F,col=cols,
-              main = target)
-text(plt, par("usr")[3], labels = rownames(curr_res), 
-     srt = 45, adj = c(1.1,1.1), xpd = T, cex=0.6)
-abline(h=cov_baseline[4],lty=2,lwd=2,col="red")
-
-par(mar = c(8,4,2,2))
-plt = barplot(curr_res[,6],beside = T,xaxt="n",legend=F,
-              ylab="Mean standardized SE",xpd=F,
-              main = target,col=cols)
-text(plt, par("usr")[3], labels = rownames(curr_res), 
-     srt = 45, adj = c(1.1,1.1), xpd = T, cex=0.6)
-abline(h=cov_baseline[6],lty=2,lwd=2,col="red")
 
 # preds = c();real=c()
 # for(j in 1:nfolds){
